--- a/app/src/main/res/layout/activity_food_list.xml
+++ b/app/src/main/res/layout/activity_food_list.xml
@@ -11,14 +11,16 @@
         android:layout_marginVertical="10dp"></ListView>
 
     <EditText
+        android:id="@+id/inputFoodname"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Insert new food."></EditText>
+        android:text="@string/editText_nameOfFood"></EditText>
 
     <Button
+        android:id="@+id/addButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
-        android:text="Add"></Button>
+        android:text="@string/button_add"></Button>
 
 </LinearLayout>
