--- a/app/src/main/res/layout/activity_food_list.xml
+++ b/app/src/main/res/layout/activity_food_list.xml
@@ -7,7 +7,7 @@
     <ListView
         android:id="@+id/foodList"
         android:layout_width="match_parent"
-        android:layout_height="480dp"
+        android:layout_height="400sp"
         android:layout_marginVertical="10dp"></ListView>
 
     <EditText
@@ -33,25 +33,28 @@
             android:id="@+id/foodplanButton"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginEnd="12dp"
+            android:layout_marginEnd="12sp"
             android:layout_toStartOf="@+id/foodsButton"
+            android:layout_gravity="top"
             android:text="@string/menu_foodplan"></Button>
 
         <Button
             android:id="@+id/foodsButton"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginEnd="14dp"
+            android:layout_marginEnd="14sp"
             android:layout_toStartOf="@+id/loginButton"
             android:background="@color/colorPrimary"
             android:text="@string/menu_foods"
+            android:layout_gravity="top"
             android:textColor="@android:color/white"></Button>
 
         <Button
             android:id="@+id/loginButton"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginEnd="17dp"
+            android:layout_marginEnd="17sp"
+            android:layout_gravity="top"
             android:layout_toStartOf="@+id/settingsButton"
             android:text="@string/menu_login"></Button>
 
@@ -60,7 +63,8 @@
             android:layout_width="95dp"
             android:layout_height="43dp"
             android:layout_alignParentEnd="true"
-            android:layout_marginEnd="11dp"
+            android:layout_marginEnd="11sp"
+            android:layout_gravity="top"
             android:text="@string/menu_settings"></Button>
     </LinearLayout>
 
