--- a/app/src/main/res/layout/activity_food_detail.xml
+++ b/app/src/main/res/layout/activity_food_detail.xml
@@ -126,26 +126,26 @@
 
         android:text="@string/button_back" />
 
-    <TextView
-        android:id="@+id/tvResult"
+    <Button
+        android:id="@+id/addToFoodplanButton"
         android:layout_width="match_parent"
-        android:layout_height="50dp"
-        android:background="#fff111"
-        android:textSize="15sp" />
+        android:layout_height="wrap_content"
+        android:layout_marginHorizontal="10dp"
+        android:layout_marginVertical="5dp"
+        android:text="@string/button_addToFoodplan" />
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:orientation="horizontal"
-        android:gravity="bottom">
+        android:gravity="bottom"
+        android:orientation="horizontal">
 
         <Button
             android:id="@+id/foodplanButton"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginEnd="12dp"
-            android:text="@string/menu_foodplan"
-            ></Button>
+            android:text="@string/menu_foodplan"></Button>
 
         <Button
             android:id="@+id/foodsButton"
