--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -100,8 +100,11 @@
             android:id="@+id/foodsButton"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
+            android:layout_row="0"
+            android:layout_column="1"
             android:gravity="bottom"
             android:text="@string/menu_foods"></Button>
+
         <Button
             android:id="@+id/loginButton"
             android:layout_width="wrap_content"
