--- a/app/src/main/res/layout/activity_food_list.xml
+++ b/app/src/main/res/layout/activity_food_list.xml
@@ -33,39 +33,49 @@
             android:id="@+id/foodplanButton"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_gravity="top"
             android:layout_marginEnd="12sp"
             android:layout_toStartOf="@+id/foodsButton"
-            android:layout_gravity="top"
-            android:text="@string/menu_foodplan"></Button>
+            android:background="@color/colorPrimary"
+            android:text="@string/menu_foodplan"
+            android:textColor="@android:color/white"
+            android:textStyle="bold"></Button>
 
         <Button
             android:id="@+id/foodsButton"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_gravity="top"
             android:layout_marginEnd="14sp"
             android:layout_toStartOf="@+id/loginButton"
             android:background="@color/colorPrimary"
             android:text="@string/menu_foods"
-            android:layout_gravity="top"
-            android:textColor="@android:color/white"></Button>
+            android:textColor="@android:color/white"
+            android:textStyle="bold"></Button>
 
         <Button
             android:id="@+id/loginButton"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginEnd="17sp"
             android:layout_gravity="top"
+            android:layout_marginEnd="17sp"
             android:layout_toStartOf="@+id/settingsButton"
-            android:text="@string/menu_login"></Button>
+            android:background="@color/colorPrimary"
+            android:text="@string/menu_login"
+            android:textColor="@android:color/white"
+            android:textStyle="bold"></Button>
 
         <Button
             android:id="@+id/settingsButton"
             android:layout_width="95dp"
             android:layout_height="43dp"
             android:layout_alignParentEnd="true"
-            android:layout_marginEnd="11sp"
             android:layout_gravity="top"
-            android:text="@string/menu_settings"></Button>
+            android:layout_marginEnd="11sp"
+            android:background="@color/colorPrimary"
+            android:text="@string/menu_settings"
+            android:textColor="@android:color/white"
+            android:textStyle="bold"></Button>
     </LinearLayout>
 
 </LinearLayout>
