--- a/app/src/main/res/layout/activity_food_list.xml
+++ b/app/src/main/res/layout/activity_food_list.xml
@@ -34,7 +34,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="top"
-            android:layout_marginEnd="12sp"
+            android:layout_marginStart="11sp"
+            android:layout_marginEnd="11sp"
             android:layout_toStartOf="@+id/foodsButton"
             android:background="@color/colorPrimary"
             android:text="@string/menu_foodplan"
@@ -48,9 +49,9 @@
             android:layout_gravity="top"
             android:layout_marginEnd="14sp"
             android:layout_toStartOf="@+id/loginButton"
-            android:background="@color/colorPrimary"
+            android:background="@drawable/my_button_border"
             android:text="@string/menu_foods"
-            android:textColor="@android:color/white"
+            android:textColor="@color/colorPrimary"
             android:textStyle="bold"></Button>
 
         <Button
@@ -67,8 +68,8 @@
 
         <Button
             android:id="@+id/settingsButton"
-            android:layout_width="95dp"
-            android:layout_height="43dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:layout_alignParentEnd="true"
             android:layout_gravity="top"
             android:layout_marginEnd="11sp"
