--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -45,41 +45,56 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_width="411dp"
+        android:layout_height="98dp"
+        android:gravity="bottom"
         android:orientation="horizontal"
-        android:gravity="bottom">
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/login_button">
 
         <Button
             android:id="@+id/foodplanButton"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginEnd="12dp"
-            android:text="@string/menu_foodplan"></Button>
+            android:layout_marginStart="11sp"
+            android:layout_marginEnd="11sp"
+            android:background="@color/colorPrimary"
+            android:text="@string/menu_foodplan"
+            android:textColor="@android:color/white"
+            android:textStyle="bold"></Button>
 
         <Button
             android:id="@+id/foodsButton"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginEnd="14dp"
-            android:text="@string/menu_foods"></Button>
+            android:layout_marginEnd="14sp"
+            android:background="@color/colorPrimary"
+            android:text="@string/menu_foods"
+            android:textColor="@android:color/white"
+            android:textStyle="bold"></Button>
 
         <Button
             android:id="@+id/loginButton"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginEnd="17dp"
+            android:layout_marginEnd="17sp"
             android:background="@color/colorPrimary"
             android:text="@string/menu_login"
-            android:textColor="@android:color/white"></Button>
+            android:textColor="@android:color/white"
+            android:textStyle="bold"></Button>
 
         <Button
             android:id="@+id/settingsButton"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentEnd="true"
-            android:layout_marginEnd="11dp"
-            android:text="@string/menu_settings"></Button>
+            android:layout_marginEnd="11sp"
+            android:background="@color/colorPrimary"
+            android:text="@string/menu_settings"
+            android:textColor="@android:color/white"
+            android:textStyle="bold"></Button>
     </LinearLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
