--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -16,33 +16,43 @@
             android:id="@+id/foodplanButton"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginEnd="12dp"
-            android:text="@string/menu_foodplan"></Button>
+            android:layout_marginStart="11sp"
+            android:layout_marginEnd="11sp"
+            android:background="@color/colorPrimary"
+            android:text="@string/menu_foodplan"
+            android:textColor="@android:color/white"
+            android:textStyle="bold"></Button>
 
         <Button
             android:id="@+id/foodsButton"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginEnd="14dp"
-            android:text="@string/menu_foods"></Button>
+            android:layout_marginEnd="14sp"
+            android:background="@color/colorPrimary"
+            android:text="@string/menu_foods"
+            android:textColor="@android:color/white"
+            android:textStyle="bold"></Button>
 
         <Button
             android:id="@+id/loginButton"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginEnd="17dp"
+            android:layout_marginEnd="17sp"
+            android:background="@color/colorPrimary"
             android:text="@string/menu_login"
-            ></Button>
+            android:textColor="@android:color/white"
+            android:textStyle="bold"></Button>
 
         <Button
             android:id="@+id/settingsButton"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentEnd="true"
-            android:layout_marginEnd="11dp"
-            android:background="@color/colorPrimary"
+            android:layout_marginEnd="11sp"
+            android:background="@drawable/my_button_border"
             android:text="@string/menu_settings"
-            android:textColor="@android:color/white"></Button>
+            android:textColor="@color/colorPrimary"
+            android:textStyle="bold"></Button>
     </LinearLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
