--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -88,7 +88,7 @@
         android:orientation="horizontal">
 
         <Button
-            android:id="@+id/foodplanButton"
+            android:id="@+id/nav_foodplanButton"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="top"
@@ -100,7 +100,7 @@
             android:textStyle="bold" />
 
         <Button
-            android:id="@+id/foodsButton"
+            android:id="@+id/nav_foodsButton"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="top"
@@ -111,7 +111,7 @@
             android:textStyle="bold" />
 
         <Button
-            android:id="@+id/loginButton"
+            android:id="@+id/nav_loginButton"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="top"
@@ -122,7 +122,7 @@
             android:textStyle="bold" />
 
         <Button
-            android:id="@+id/settingsButton"
+            android:id="@+id/nav_settingsButton"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="top"
