--- a/app/src/main/res/layout/activity_food_list.xml
+++ b/app/src/main/res/layout/activity_food_list.xml
@@ -4,23 +4,11 @@
     android:layout_height="match_parent"
     android:orientation="vertical">
 
-    <SearchView
-        android:id="@+id/searchView"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:iconifiedByDefault="false"/>
-
-    <ListView
-        android:id="@+id/foodList"
-        android:layout_width="match_parent"
-        android:layout_height="400sp"
-        android:layout_marginVertical="10dp"></ListView>
-
     <EditText
         android:id="@+id/inputFoodname"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="@string/editText_nameOfFood"></EditText>
+        android:layout_height="50sp"
+        android:hint="@string/editText_nameOfFood"></EditText>
 
     <Button
         android:id="@+id/addButton"
@@ -28,6 +16,22 @@
         android:layout_height="wrap_content"
         android:layout_gravity="center"
         android:text="@string/button_add"></Button>
+
+    <!--
+    <SearchView
+        android:id="@+id/searchView"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:iconifiedByDefault="false"/>
+     -->
+
+    <ListView
+        android:id="@+id/foodList"
+        android:layout_width="match_parent"
+        android:layout_height="400sp"
+        android:layout_marginVertical="10dp"></ListView>
+
+
 
     <LinearLayout
         android:layout_width="match_parent"
