--- a/app/src/main/res/layout/activity_food_plan_detail.xml
+++ b/app/src/main/res/layout/activity_food_plan_detail.xml
@@ -48,7 +48,7 @@
                 android:text="@string/txt_food_name"
                 android:textStyle="bold" />
 
-            <EditText
+            <TextView
                 android:id="@+id/foodNameVal"
                 android:layout_width="wrap_content"
                 android:layout_height="50dp"
@@ -69,7 +69,7 @@
                 android:text="@string/txt_food_price"
                 android:textStyle="bold" />
 
-            <EditText
+            <TextView
                 android:id="@+id/foodPriceVal"
                 android:layout_width="wrap_content"
                 android:layout_height="50dp"
@@ -90,7 +90,7 @@
                 android:text="@string/txt_food_type"
                 android:textStyle="bold" />
 
-            <EditText
+            <TextView
                 android:id="@+id/foodTypeVal"
                 android:layout_width="wrap_content"
                 android:layout_height="50dp"
