--- a/app/src/main/res/layout/activity_food_detail.xml
+++ b/app/src/main/res/layout/activity_food_detail.xml
@@ -158,11 +158,10 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginEnd="14sp"
-            android:background="@drawable/my_button_border"
+            android:background="@color/colorPrimary"
             android:text="@string/menu_foods"
-            android:textColor="@color/colorPrimary"
+            android:textColor="@android:color/white"
             android:textStyle="bold"></Button>
-
 
         <Button
             android:id="@+id/nav_loginButton"
