--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -66,7 +66,10 @@
         android:layout_height="80dp"
         android:numColumns="3" />
 
-    <TextView       
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="30dp"
+        android:background="@color/colorPrimary"
         android:text="@string/txt_friday"
         android:textSize="20dp"
         android:textColor="#ffffff"
@@ -76,45 +79,8 @@
         android:id="@+id/gridFriday"
         android:layout_width="match_parent"
         android:layout_height="80dp"
-        android:numColumns="3">
-    </GridView>
+        android:numColumns="3" />
 
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal">
-
-        <Button
-            android:id="@+id/button_currentweek"
-            android:layout_width="129dp"
-            android:layout_height="wrap_content"
-            android:background="@color/colorPrimary"
-            android:text="current Week"
-            android:textColor="@android:color/white" />
-
-        <TextView
-            android:id="@+id/text_weekno"
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            android:layout_weight="1"
-            android:background="@drawable/my_button_border"
-            android:gravity="center_horizontal|center_vertical"
-            android:text="TextView"
-            android:textColor="@color/colorPrimary"
-            android:textSize="24sp"
-            android:textStyle="bold"
-            />
-
-        <Button
-            android:id="@+id/button_nextWeek"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:background="@color/colorPrimary"
-            android:text="next Week"
-            android:textColor="@android:color/white"/>
-    </LinearLayout>
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -125,7 +91,9 @@
             android:id="@+id/nav_foodplanButton"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="10sp"
+            android:layout_gravity="top"
+            android:layout_marginStart="11sp"
+            android:layout_marginEnd="11sp"
             android:background="@drawable/my_button_border"
             android:text="@string/menu_foodplan"
             android:textColor="@color/colorPrimary"
@@ -135,7 +103,8 @@
             android:id="@+id/nav_foodsButton"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="10sp"
+            android:layout_gravity="top"
+            android:layout_marginEnd="14sp"
             android:background="@color/colorPrimary"
             android:text="@string/menu_foods"
             android:textColor="@android:color/white"
@@ -145,11 +114,27 @@
             android:id="@+id/nav_loginButton"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="10sp"
+            android:layout_gravity="top"
+            android:layout_marginEnd="17sp"
             android:background="@color/colorPrimary"
             android:text="@string/menu_login"
             android:textColor="@android:color/white"
             android:textStyle="bold" />
+
+        <Button
+            android:id="@+id/nav_settingsButton"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="top"
+            android:layout_marginEnd="11sp"
+            android:background="@color/colorPrimary"
+            android:text="@string/menu_settings"
+            android:textColor="@android:color/white"
+            android:textStyle="bold" />
     </LinearLayout>
+
+
 </LinearLayout>
+
+
 
