--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -83,6 +83,42 @@
 
     <LinearLayout
         android:layout_width="match_parent"
+        android:layout_height="39dp">
+
+        <Button
+            android:id="@+id/button_currentweek"
+            android:layout_width="129dp"
+            android:layout_height="30sp"
+            android:background="@color/colorPrimary"
+            android:text="current Week"
+            android:textColor="@android:color/white" />
+
+        <TextView
+            android:id="@+id/text_weekno"
+            android:layout_width="wrap_content"
+            android:layout_height="30sp"
+            android:layout_weight="1"
+            android:background="@drawable/my_button_border"
+            android:gravity="center_horizontal|center_vertical"
+            android:text="TextView"
+            android:textColor="@color/colorPrimary"
+            android:textSize="24sp"
+            android:textStyle="bold" />
+
+        <Button
+            android:id="@+id/button_nextWeek"
+            android:layout_width="wrap_content"
+            android:layout_height="30sp"
+            android:layout_weight="1"
+            android:background="@color/colorPrimary"
+            android:text="next Week"
+            android:textColor="@android:color/white" />
+
+    </LinearLayout>
+
+
+    <LinearLayout
+        android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:gravity="bottom"
         android:orientation="horizontal">
