--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -55,45 +55,48 @@
 
         <Button
             android:id="@+id/nav_foodplanButton"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="90sp"
+            android:layout_height="50sp"
+            android:layout_gravity="top"
             android:layout_marginStart="11sp"
-            android:layout_marginEnd="11sp"
+            android:layout_marginEnd="10sp"
             android:background="@color/colorPrimary"
             android:text="@string/menu_foodplan"
             android:textColor="@android:color/white"
-            android:textStyle="bold"></Button>
+            android:textStyle="bold" />
 
         <Button
             android:id="@+id/nav_foodsButton"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginEnd="14sp"
+            android:layout_width="90sp"
+            android:layout_height="50sp"
+            android:layout_gravity="top"
+            android:layout_marginEnd="10sp"
             android:background="@color/colorPrimary"
             android:text="@string/menu_foods"
             android:textColor="@android:color/white"
-            android:textStyle="bold"></Button>
+            android:textStyle="bold" />
 
         <Button
             android:id="@+id/nav_loginButton"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginEnd="17sp"
+            android:layout_width="90sp"
+            android:layout_height="50sp"
+            android:layout_gravity="top"
+            android:layout_marginEnd="10sp"
             android:background="@drawable/my_button_border"
             android:text="@string/menu_login"
             android:textColor="@color/colorPrimary"
-            android:textStyle="bold"></Button>
+            android:textStyle="bold" />
 
-        <Button
-            android:id="@+id/nav_settingsButton"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentEnd="true"
-            android:layout_marginEnd="11sp"
+        <ImageButton
+            android:id="@+id/nav_searchButton"
+            android:layout_width="90sp"
+            android:layout_height="50sp"
+            android:layout_gravity="top"
+            android:layout_marginEnd="10sp"
             android:background="@color/colorPrimary"
-            android:text="@string/menu_settings"
+            android:src="@drawable/foodsearchicon"
             android:textColor="@android:color/white"
-            android:textStyle="bold"></Button>
+            android:textStyle="bold" />
     </LinearLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
